.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_arrowReturnType.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_arrowReturnType.ts(20,3): error TS377004: This Effect requires a service that is missing from the expected Effect context: `R`. effect(missingEffectContext)


==== /.src/missingEffectContext_arrowReturnType.ts (1 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    import type * as Scope from "effect/Scope"
    
    // should not trigger
    export const test: {
      <A, E, R>(eff: Effect.Effect<A, E, R>): Effect.Effect<A, E, Exclude<R, Scope.Scope>>
    } = <A, E, R>(eff: Effect.Effect<A, E, R>) => {
      return Effect.void.pipe(Effect.andThen(eff), Effect.scoped)
    }
    
    // same as before
    export const test2: {
      <A, E, R>(eff: Effect.Effect<A, E, R>): Effect.Effect<A, E, Exclude<R, Scope.Scope>>
    } = <A, E, R>(eff: Effect.Effect<A, E, R>) => Effect.void.pipe(Effect.andThen(eff), Effect.scoped)
    
    // should error
    export const test3 = <A, E, R>(eff: Effect.Effect<A, E, R>): Effect.Effect<A, E, Exclude<R, Scope.Scope>> =>
      // @ts-expect-error
      Effect.void.pipe(Effect.andThen(eff))
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `R`. effect(missingEffectContext)
    
